tests/src/frontend/typechecking/invalid/shadowing_in_class_default.sk
class C1(
  f: Int = {
    x = 1;
    x = 2;
    x
  },
)
